# iColour-app

./: .gitignore  CONTRIBUTING.md  README.md  app_replit.py  app_security.py  gunicorn.conf.py  main.py  models_replit.py  models_security.py  package.json  pyproject.toml  pytest.ini  replit.md  replit_auth.py  run_tests.sh  setup.cfg  simple_converter.py  utils.py
routes/: __init__.py  converter.py  dashboard.py  main.py
static/css/: custom.css
static/js/: main.js
templates/: 403.html  base.html  coming_soon.html  conversion_complete.html  convert.html  dashboard.html  dashboard_simple.html  error.html  file_too_large.html  image_preview.html  index.html  login.html  preview_complete.html  register.html  simple_convert.html  simple_result.html
templates/file_upload/: upload.html
templates/security/: _messages.html  login_user.html  register_user.html
tests/: __init__.py  conftest.py  test_simple.py  test_stubs.py
tests/integration/: __init__.py  test_api.py  test_workflow.py
tests/unit/: __init__.py  test_auth.py  test_models.py  test_utils.py
tools/: __init__.py
tools/file_upload/: __init__.py  routes.py  storage.py
tools/file_upload/tests/: test_file_upload.py
